--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"resolveJsonModule": false,
 		"skipLibCheck": true,
 		"jsx": "react-jsx",
-		"noEmit": true,
+		"noEmit": true
 	},
 	"include": ["./src", "./skills"],
 	"references": []
